CRM-1357: Dashboard label goes beyond the page when it is too long -fix css

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/less/oro.less
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/less/oro.less
@@ -2834,6 +2834,7 @@ label.radio.error {
 .breadcrumb > li {
   color: #777;
   font: 11px/14px @baseFontFamily;
+  word-break: break-all;
 }
 .breadcrumb > li > .divider {
   color: #777;
